Create TabManager.TabLifetime UKM.

BUG=776376

Change-Id: I187e3a55c4f595b25064d9b41aaa1751e8e61d2e