chrome/browser/resource_coordinator/tab_manager_web_contents_data.cc
@@ -78,6 +78,7 @@ void TabManager::WebContentsData::DidFinishNavigation(
     return;
   }
 
+  tab_data_.navigation_time = navigation_handle->NavigationStart();
   ukm_source_id_ = ukm::ConvertToSourceId(navigation_handle->GetNavigationId(),
                                           ukm::SourceIdType::NAVIGATION_ID);
 }
@@ -103,6 +104,8 @@ void TabManager::WebContentsData::WebContentsDestroyed() {
                                base::TimeDelta::FromSeconds(1),
                                base::TimeDelta::FromDays(1), 100);
   }
+
+  ReportUKMWhenTabIsClosed();
 
   if (!web_contents()->IsVisible() &&
       tab_data_.last_inactive_time != base::TimeTicks::UnixEpoch()) {
@@ -227,6 +230,15 @@ TimeTicks TabManager::WebContentsData::NowTicks() const {
   return test_tick_clock_->NowTicks();
 }
 
+void TabManager::WebContentsData::ReportUKMWhenTabIsClosed() {
+  if (!ukm_source_id_)
+    return;
+  auto duration = NowTicks() - tab_data_.navigation_time;
+  ukm::builders::TabManager_TabLifetime(ukm_source_id_)
+      .SetTimeSinceNavigation(duration.InMilliseconds())
+      .Record(g_browser_process->ukm_recorder());
+}
+
 void TabManager::WebContentsData::
     ReportUKMWhenBackgroundTabIsClosedOrForegrounded(bool is_foregrounded) {
   if (!ukm_source_id_)
@@ -242,6 +254,7 @@ TabManager::WebContentsData::Data::Data()
     : is_discarded(false),
       discard_count(0),
       is_recently_audible(false),
+      navigation_time(TimeTicks::UnixEpoch()),
       last_audio_change_time(TimeTicks::UnixEpoch()),
       last_discard_time(TimeTicks::UnixEpoch()),
       last_reload_time(TimeTicks::UnixEpoch()),
